2001-04-27  Derek Price  <dprice@collab.net>

	* TODO (202): Remove my claim.
	(203): New item.

2001-04-27  Derek Price  <dprice@collab.net>

	* configure.in: Update version number.

	* configure: Regenerated.
	* cvs.spec: Ditto.

2001-04-27  Derek Price  <dprice@collab.net>

	* configure.in: Update version number.
	* NEWS (new since 1.11.1): Broke read-only fix.
	(new since 1.11): Diff fix.

	* configure: Regenerated.
	* cvs.spec: Ditto.

2001-04-26  Derek Price  <dprice@collab.net>

	* cvs.spec.in: Don't include %{_infodir}/dir.
	(krb5): Remove krb5-config from dependencies.

	* cvs.spec: Regenerated.

2001-04-25  Derek Price  <dprice@collab.net>

	* configure.in: Update version to 1.11.1.

	* Makefile.in: Regenerated with AM 1.4e as of today at 18:10 -0400
	(EDT).
	* aclocal.m4: Ditto.
	* configure: Ditto.

2001-04-25  Derek Price  <dprice@collab.net>

	* NEWS: Correct punctuation.

2001-04-25  Larry Jones  <larry.jones@sdr.com>

	* depcomp (aix, sgi): Correct previous fixes.

2001-04-24  Larry Jones  <larry.jones@sdr.com>

	* depcomp (sgi): Remove stray HP-UX code.

2001-04-18  Derek Price  <dprice@collab.net>

	* noautoconf.sh: New shell script to touch Makefile.in files and
	prevent unecessary AUtomake rebuilds after updates.
	* NEWS: Note this new scipt.

2001-04-16  Larry Jones  <larry.jones@sdr.com>

	* depcomp (aix): Remove stray HP-UX code.

2001-04-12  Larry Jones  <larry.jones@sdr.com>

	* mkinstalldirs: Newer version from Automake.

2001-04-12  Larry Jones  <larry.jones@sdr.com>

	* depcomp: Newer version from Automake.

2001-04-04  Larry Jones  <larry.jones@sdr.com>

	* depcomp: Don't count on $? being set in then or else clauses.

2001-03-30  Larry Jones  <larry.jones@sdr.com>

	* NEWS: Note new rlog and rannotate commands.

2001-03-14  Derek Price  <derek.price@openavenue.com>

	* configure.in (AC_CHECK_FUNCS): Look for gettimeofday.

	* config.h.in: Regenerated:
	* configure: Ditto.
	* stamp-h1.in: Ditto.
