@@ -1,3 +1,9 @@
+2001-04-29  Derek Price  <dprice@collab.net>
+
+	* Makefile.am: Add remotecheck to distcheck-hook.
+
+	* Makefile.in: Regenerated.
+
 2001-04-27  Derek Price  <dprice@collab.net>
 
 	* TODO (202): Remove my claim.
